# RPCameraInterface

./: CMakeLists.txt  README.md
.github/workflows/: build_check.yml
cmake/modules/: FindGLIB2.cmake
debian/: changelog  control  copyright  rules
demo/: CMakeLists.txt  main.cpp
include/: CameraInterface.h  CameraInterfaceV4l2.h  ImageData.h  ImageFormat.h  ImageFormatConverter.h
include/RPCameraInterface/: CameraEnumeratorQt.h  CameraInterface.h  CameraInterfaceAndroid.h  CameraInterfaceBase.h  CameraInterfaceDShow.h  CameraInterfaceDepthAI.h  CameraInterfaceGStreamer.h  CameraInterfaceLibWebcam.h  CameraInterfaceOpenCV.h  CameraInterfaceRPNetwork.h  CameraInterfaceScreenCaptureLite.h  CameraInterfaceV4L2.h  CameraInterfaceV4l2.h  ImageData.h  ImageFormat.h  ImageFormatConverter.h  OpenCVConverter.h  PortableTypes.h  RPCameraInterfaceDefs.h  VideoEncoder.h
src/: CameraEnumeratorQt.cpp  CameraInterface.cpp  CameraInterfaceAndroid.cpp  CameraInterfaceBase.cpp  CameraInterfaceDShow.cpp  CameraInterfaceDepthAI.cpp  CameraInterfaceGStreamer.cpp  CameraInterfaceLibWebcam.cpp  CameraInterfaceOpenCV.cpp  CameraInterfaceRPNetwork.cpp  CameraInterfaceScreenCaptureLite.cpp  CameraInterfaceV4L2.cpp  CameraInterfaceV4l2.cpp  ImageData.cpp  ImageFormat.cpp  ImageFormatConverter.cpp  PortableTypes.cpp  VideoEncoder.cpp
src/cap_dshow/: cap_dshow.cpp  cap_dshow.hpp
